crates/rome_formatter/tests/specs/prettier/typescript/compiler/castTest.ts.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 125
expression: castTest.ts

---
# Input
```js

var x : any = 0;
var z = <number> x;
var y = x + z;

var a = <any>0;
var b = <boolean>true;
var s = <string>"";

var ar = <any[]>null;

var f = <(res : number) => void>null;

declare class Point
{
    x: number;
    y: number;
    add(dx: number, dy: number): Point;
    mult(p: Point): Point;
    constructor(x: number, y: number);
}

var p_cast = <Point> ({
    x: 0,
    y: 0,
    add: function(dx, dy) {
        return new Point(this.x + dx, this.y + dy);
    },
    mult: function(p) { return p; }
})

```

# Output
```js
var x: any = 0;
var z = <number>;
x;
var y = x + z;

var a = <any>;
0;
var b = <boolean>;
true;
var s = <string>;
"";

var ar = <any[]>null;

var f = <(res: number) => void>null;

declare class Point {
  x: number;
  y: number;
  add(dx: number, dy: number): Point;
  mult(p: Point): Point;
  constructor(x: number, y: number);
}

var p_cast = <Point>;
({
  x: 0,
  y: 0,
  add: function (dx, dy) {
    return new Point(this.x + dx, this.y + dy);
  },
  mult: function (p) {
    return p;
  },
});

```

# Errors
```
error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ castTest.ts:3:18
  │
3 │ var z = <number> x;
  │ -----------------^ An explicit or implicit semicolon is expected here...
  │ │                 
  │ ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ castTest.ts:6:14
  │
6 │ var a = <any>0;
  │ -------------^ An explicit or implicit semicolon is expected here...
  │ │             
  │ ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ castTest.ts:7:18
  │
7 │ var b = <boolean>true;
  │ -----------------^^^^ An explicit or implicit semicolon is expected here...
  │ │                 
  │ ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ castTest.ts:8:17
  │
8 │ var s = <string>"";
  │ ----------------^^ An explicit or implicit semicolon is expected here...
  │ │                
  │ ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ castTest.ts:23:22
   │
23 │ var p_cast = <Point> ({
   │ ---------------------^ An explicit or implicit semicolon is expected here...
   │ │                     
   │ ...Which is required to end this statement


```


